# ginop

./: .gitignore  MANIFEST.in  Pipfile  README.md  config.py  logging.conf  run.py  setup.cfg  setup.py
LICENSE.md/: LICENSE.md
api/: config.py  settings.py  urls.py
api/dev/: README.md
api/dev/blockchain/: chain.py  controller.py
api/dev/common/: chainTypes.py  constants.py  exceptions.py
api/home/: README.md  models.py  schema.py  views.py
api/main/: admin.py  apps.py  mixins.py  models.py  schema.py  urls.py  views.py
api/main/migrations/: 0001_initial.py
blockchain/: chain.py  controller.py
blockchain/common/: chainTypes.py
blockchain/private/: chain.py
gchain/: chainTypes.py  exceptions.py  onChainHandler.py
ginope/api/: settings.py
ginope/api/dev/blockchain/common/: chainTypes.py
ginope/api/home/: models.py  routes.py  schema.py
log/: conf.yaml
main/: README.md  __init__.py  app.py
main/main_app/: __init__.py  exceptions.py  models.py  routes.py  schema.py
main/src/: __init__.py  models.py  routes.py
main/static/: README.md  package-lock.json  package.json  webpack.config.js
main/templates/: index.html
tests/: test_admin.py  test_blockchain.py  test_models.py  test_onChainHandler.py  test_routes.py  test_views.py
