[metadata]
name = ginop
version = 0.1
description = A module for smart contract management of employee productivity workflows.
long_description = file: README.md
url = https://usesource.app/
author = Adrian Brown
author_email = ap.brown011@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Python 3.9.5
    Django 4.0.1
    Werkzeug 2.0.2
